--- a/1-reactivity/1.1-getter-setter.html
+++ b/1-reactivity/1.1-getter-setter.html
@@ -1,28 +1,20 @@
 <script>
-function isObject (obj) {
-  return typeof obj === 'object'
-    && !Array.isArray(obj)
-    && obj !== null
-    && obj !== undefined
-}
-
-function convert (obj) {
-  if (!isObject(obj)) {
-    throw new TypeError()
+  function convert(obj) {
+    if (typeof obj !== "object" && obj === null) {
+      return new TypeError();
+    }
+    Object.keys(obj).forEach((key) => {
+      let realValue = obj[key];
+      Object.defineProperty(obj, key, {
+        get() {
+          console.log(`getting key "${key}": ${realValue}`);
+          return realValue;
+        },
+        set(newValue) {
+          console.log(`setting key "${key}" to: ${newValue}`);
+          realValue = newValue;
+        },
+      });
+    });
   }
-
-  Object.keys(obj).forEach(key => {
-    let internalValue = obj[key]
-    Object.defineProperty(obj, key, {
-      get () {
-        console.log(`getting key "${key}": ${internalValue}`)
-        return internalValue
-      },
-      set (newValue) {
-        console.log(`setting key "${key}" to: ${newValue}`)
-        internalValue = newValue
-      }
-    })
-  })
-}
 </script>
