--- a/1-reactivity/1.2-dependency-tracking.html
+++ b/1-reactivity/1.2-dependency-tracking.html
@@ -1,32 +1,26 @@
 <script>
-// a class representing a dependency
-// exposing it on window is necessary for testing
-window.Dep = class Dep {
-    constructor () {
-      this.subscribers = new Set()
+  // a class representing a dependency
+  // exposing it on window is necessary for testing
+  window.Dep = class Dep {
+    constructor() {
+      this.subscribers = new Set();
     }
-
-    depend () {
+    depend() {
       if (activeUpdate) {
-        // register the current active update as a subscriber
-        this.subscribers.add(activeUpdate)
+        this.subscribers.add(activeUpdate);
       }
     }
-
-    notify () {
-      // run all subscriber functions
-      this.subscribers.forEach(subscriber => subscriber())
+    notify() {
+      this.subscribers.forEach((item) => item());
     }
-}
-
-let activeUpdate
-
-function autorun (update) {
-  function wrappedUpdate () {
-    activeUpdate = wrappedUpdate
-    update()
-    activeUpdate = null
+  };
+  let activeUpdate;
+  function autorun(update) {
+    function wrappedUpdate() {
+      activeUpdate = wrappedUpdate;
+      update();
+      activeUpdate = null;
+    }
+    wrappedUpdate();
   }
-  wrappedUpdate()
-}
 </script>
