响应是原理结束

--- a/1-reactivity/1.1-getter-setter.html
+++ b/1-reactivity/1.1-getter-setter.html
@@ -12,7 +12,7 @@
         },
         set(newValue) {
           console.log(`setting key "${key}" to: ${newValue}`);
-          realValue = newValue;
+          if (realValue !== newValue) realValue = newValue;
         },
       });
     });
