--- a/1-reactivity/1.2-dependency-tracking.html
+++ b/1-reactivity/1.2-dependency-tracking.html
@@ -11,7 +11,7 @@
       }
     }
     notify() {
-      this.subscribers.forEach((item) => item());
+      this.subscribers.forEach((subscriber) => subscriber());
     }
   };
   let activeUpdate;
