--- a/2-plugin/2.1-simple-plugin.html
+++ b/2-plugin/2.1-simple-plugin.html
@@ -1,27 +1,35 @@
 <script src="../node_modules/vue/dist/vue.js"></script>
 
 <script>
-const RulesPlugin = {
-  install (Vue) {
-    Vue.mixin({
-      created () {
-        if (this.$options.hasOwnProperty('rules')) {
-          // Do something with rules
-          const rules = this.$options.rules
-          Object.keys(rules).forEach(key => {
-            const rule = rules[key]
-            this.$watch(key, newValue => {
-              const result = rule.validate(newValue)
-              if (!result) {
-                console.log(rule.message)
-              }
-            })
-          })
-        }
-      }
-    })
-  }
-}
+  const RulesPlugin = {
+    install(Vue) {
+      Vue.mixin({
+        created() {
+          if (this.$options.rules) {
+            Object.keys(this.$options.rules).forEach((key) => {
+              const rule = this.$options.rules[key];
+              this.$watch((key, newValue) => {
+                const result = rule.validate(newValue);
+                if (!result) {
+                  console.log(rule.message);
+                }
+              });
+            });
+          }
+        },
+      });
+    },
+  };
 
-Vue.use(RulesPlugin)
+  Vue.use(RulesPlugin);
+
+  const vm = new Vue({
+    data: { foo: 10 },
+    rules: {
+      foo: {
+        validate: (value) => value > 1,
+        message: "foo must be greater than one",
+      },
+    },
+  });
 </script>
