--- a/3-render-function/3.1-render-tags.html
+++ b/3-render-function/3.1-render-tags.html
@@ -5,19 +5,20 @@
 </div>
 
 <script>
-Vue.component('example', {
-  functional: true,
-  props: {
-    tags: {
-      type: Array,
-      validator (arr) { return !!arr.length }
-    }
-  },
-  render: (h, context) => {
-    const tags = context.props.tags
-    return h('div', context.data, tags.map((tag, index) => h(tag, index)))
-  }
-})
+  Vue.component("example", {
+    render(h) {
+      return h(
+        "div",
+        this.tags.map((tag, i) => h(tag, i))
+      );
+    },
+    props: {
+      tags: {
+        type: Array,
+        required: true,
+      },
+    },
+  });
 
-new Vue({ el: '#app' })
+  new Vue({ el: "#app" });
 </script>
