改回使用 render 函数

--- a/3-render-function/3.2-render-comp.html
+++ b/3-render-function/3.2-render-comp.html
@@ -15,11 +15,10 @@
   };
 
   Vue.component("example", {
-    functional: true,
     props: ["ok"],
-    render(h, { props: { ok } }) {
-      const getFooOrBar = ok ? Foo : Bar;
-      return h(getFooOrBar)
+    render(h) {
+      const getFooOrBar = this.ok ? Foo : Bar;
+      return h(getFooOrBar);
     },
   });
 
